# OPTIMAKE

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  package.json
client/: Dockerfile  index.html  package.json  vite.config.js
client/src/: root.jsx
engine/: CMakeLists.txt
engine/include/: scheduler.h
engine/src/: main.cpp  scheduler.cpp
server/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
server/src/: main.js
